[WEEK050] Colored Pointers and Load Barriers